objects/Site_Address__c/Site_Address__c.object-meta.xml
<CustomObject>
    <label>Site Address</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>