objects/Site_Address__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site Addresses</relationshipLabel>
    <relationshipName>Site_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>