objects/Site_Address__c/fields/EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>EPA_ID__c</fullName>
    <label>EPA ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>