objects/Site_Address__c/fields/EQAI_Generator_ID__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Generator_ID__c</fullName>
    <label>EQAI Generator ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>