objects/Site_Address__c/fields/NAICS_ID__c.field-meta.xml
<CustomField>
    <fullName>NAICS_ID__c</fullName>
    <label>NAICS ID</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>