objects/Site_Address__c/fields/PostCodeError__c.field-meta.xml
<CustomField>
    <fullName>PostCodeError__c</fullName>
    <formula>Site_Phone_No__c ==  Site_Postal_Code__c</formula>
    <label>PostCodeError</label>
    <type>Checkbox</type>
</CustomField>