objects/Site_Address__c/fields/Print_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Print_Site_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Site Name</label>
    <type>Checkbox</type>
</CustomField>