objects/Site_Address__c/fields/Site_State__c.field-meta.xml
<CustomField>
    <fullName>Site_State__c</fullName>
    <label>Site State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Site_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>