objects/Site_Address__c/fields/Tax_Area__c.field-meta.xml
<CustomField>
    <fullName>Tax_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Area</label>
    <referenceTo>Tax_Area__c</referenceTo>
    <relationshipLabel>Site Addresses</relationshipLabel>
    <relationshipName>Site_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>