objects/Site_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site_City__c</columns>
    <columns>Site_Contact__c</columns>
    <columns>Site_Country__c</columns>
    <columns>Site_Email_Address__c</columns>
    <columns>Site_Phone_No__c</columns>
    <columns>Site_Postal_Code__c</columns>
    <columns>Site_State__c</columns>
    <columns>Site_Street__c</columns>
    <columns>Tax_Area__c</columns>
    <columns>Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>